2007-06-01 Braden McDaniel  <braden@endoframe.com>

	Ensure that scene pointers for the active viewpoint_node and the
	active navigation_info_node point to scenes that are either the
	browser's root_scene or one of its descendants.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::active_viewpoint(viewpoint_node &)): Validate
	that the argument viewpoint_node's scene is (a descendant of) the
	browser's root_scene.
	(openvrml::browser::active_navigation_info(navigation_info_node&)):
	Validate that the argument navigation_info_node's scene is (a
	descendant of) the browser's root_scene.

2007-06-01 Braden McDaniel  <braden@endoframe.com>

	Removed node-wide recursive mutex.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::externproto_node::set_proto_node(proto_node_type &)):
	Removed lock.
	* src/libopenvrml/openvrml/node.cpp
	(openvrml::node::scene() const): Moved definition from node.h;
	acquire a read lock of the scene_mutex_.
	(openvrml::node::initialize(openvrml::scene &, double)): Acquire a
	read lock of the scene_mutex_; promote it to a write lock when
	actually setting the scene_.
	(openvrml::node::shutdown(double)): Acquire a read lock of the
	scene_mutex_; promote it to a write lock when actually setting the
	scene_.
	(openvrml::node::modified(bool)): Acquire a write lock of the
	modified_mutex_.
	(openvrml::node::modified() const): Acquire a read lock of the
	modified_mutex_.
	(openvrml::node::print(std::ostream &, size_t) const): Removed
	lock.
	(openvrml::appearance_node::render_appearance(viewer &,
	rendering_context)): Removed lock.
	(openvrml::bounded_volume_node::bounding_volume() const): Acquire
	a write lock of the bounding_volume_dirty_mutex_.
	(openvrml::bounded_volume_node::bounding_volume_dirty(bool)):
	Acquire a write lock of the bounding_volume_dirty_mutex_.
	(openvrml::bounded_volume_node::bounding_volume_dirty() const):
	Acquire a read lock of the bounding_volume_dirty_mutex_.